# gitwise

./: .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.es.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.md  CONTRIBUTING.es.md  CONTRIBUTING.md  CONVENTIONS.es.md  CONVENTIONS.md  DESIGN.es.md  DESIGN.md  LANGUAGE.es.md  LANGUAGE.md  LICENSE  NOTES.es.md  NOTES.md  README.es.md  README.md  RELEASE.es.md  RELEASE.md  ROADMAP.es.md  ROADMAP.md  SECURITY.es.md  SECURITY.md  install.ps1  install.sh  lefthook.yml  opencode.json  pyproject.toml  skills-lock.json  tui.json
.agents/rules/: color-system.md  github-actions.md  project-structure.md  python-cli.md  setup-agents.md  shell-scripts.md  testing.md
.claude/rules/: color-system.md  gitwise.md  project-structure.md  setup-agents.md  shell-scripts.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-release.yml  auto-version.yml  ci.yml  publish-pypi.yml  release.yml  test-windows-installer.yml  update-homebrew-tap.yml
.opencode/themes/: gitwise.json
demo/: gitwise-demo.cast  script.sh
docs/: MIGRATION-0.17.md  README.md  action-plan-v0.12.md  action-plan.md  labels.md  review-analysis-report.md  rewrite-history.md  why.md
docs/es/: MIGRATION-0.17.md  README.md  action-plan-v0.12.md  action-plan.md  labels.md  review-analysis-report.md  rewrite-history.md  why.md
docs/es/guidelines/: README.md  anti-patterns.md  architecture.md  python-guidelines.md  testing-guidelines.md
docs/es/plans/: 2026-06-19-envelope-v3.md  agent-output-status-diff-roadmap.md  post-0.28-sprints-roadmap.md  setup-agents-ai-agents-first.md
docs/es/reference/: commands.md
docs/guidelines/: README.md  anti-patterns.md  architecture.md  python-guidelines.md  testing-guidelines.md
docs/plans/: 2026-06-19-envelope-v3.md  agent-output-status-diff-roadmap.md  post-0.28-sprints-roadmap.md  setup-agents-ai-agents-first.md
docs/reference/: commands.md
gitwise/: __init__.py  __main__.py  _cli_completions.py  _cli_dispatch.py  _cli_introspection.py  _cli_parser.py  _cli_setup_agents.py  _i18n_data.json  _paths.py  _runtime_config.py  _sa_exec.py  _sa_plan.py  _sa_plan_gitfiles.py  _sa_plan_skills.py  _sa_state.py  _sa_types.py  audit.py  branches.py  clean.py  commit.py  conflicts.py  context.py  design.py  diff.py  doctor.py  git.py  health.py  i18n.py  log.py  merge.py  optimize.py  output.py  pick.py  pr.py  schema.py  setup.py  setup_agents.py  show.py  snapshot.py  stash.py  (+8 more)
gitwise/setup_agents/: __init__.py  exec.py  format.py  plan.py  plan_gitfiles.py  plan_skills.py  state.py  types.py
gitwise/setup_agents/adapters/: __init__.py  aider.py  base.py  codex.py  continue_adapter.py  cursor.py  opencode.py  pi.py
gitwise/setup_agents/providers/: __init__.py  aider.py  base.py  claude.py  codex.py  continue_adapter.py  cursor.py  opencode.py  pi.py
gitwise/utils/: __init__.py  git_output.py  in_progress.py  json_envelope.py  parsing.py  secret_scan.py  types.py
scripts/: audit-template-injection.py
scripts/docs/: check_i18n_pairs.py  check_md_links.py  check_roadmap_baseline.py  check_schema_catalog.py  sync_changelog_es.py
share/: git-config-modern.txt
share/agents/skills/git-clean/: SKILL.md
share/agents/skills/git-optimize/: SKILL.md
share/aider/: CONVENTIONS.md.template  aider.conf.yml.template
share/claude/: CLAUDE.md.template  settings.json.template
share/claude/rules/: gitwise.md
share/claude/skills/git-audit/: SKILL.md
share/codex/agents/: gitwise.toml.template
share/continue/rules/: gitwise.md.template
share/cursor/rules/: gitwise.mdc.template
share/hooks/: commit-msg  pre-commit
share/opencode/agents/: gitwise.md.template
share/schemas/v1/input/: audit.json  branches.json  clean.json  commands.json  commit.json  completions.json  conflicts.json  context.json  diff.json  doctor.json  health.json  log.json  merge.json  optimize.json  pick.json  pr.json  schema.json  setup-agents.json  setup.json  show.json  snapshot.json  stash.json  status.json  suggest.json  summarize.json  sync.json  tag.json  undo.json  update.json  worktree.json
share/schemas/v1/output/: audit.json  branches.json  clean.json  commands.json  commit.json  conflicts.json  context.json  diff.json  doctor.json  health.json  log.json  merge.json  optimize.json  pick.json  pr.json  setup-agents.json  setup.json  snapshot.json  stash.json  status.json  suggest.json  (+6 more)
tests/: conftest.py  test_adapters.py  test_audit.py  test_branches.py  test_clean.py  test_commands.py  test_commit.py  test_conflicts.py  test_context.py  test_design.py  test_diff.py  test_doctor.py  test_edge_cases.py  test_envelope_contract.py  test_git.py  test_git_output_utils.py  test_health.py  test_i18n.py  test_in_progress.py  test_json_envelope_utils.py  test_log.py  test_main.py  test_md_links_script.py  test_merge.py  test_optimize.py  test_output.py  test_parsing_utils.py  test_pick.py  test_pr.py  test_roadmap_baseline_script.py  test_sa_plan.py  test_sa_unit.py  test_schema_catalog.py  test_secret_scan.py  test_setup.py  test_setup_agents.py  test_show.py  test_snapshot.py  test_stash.py  test_status.py  (+9 more)
tests/fixtures/: generate.sh
