[project]
name = "gitwise"
version = "0.1.0"
description = "Zero-dependency Python CLI for optimizing git workflows and Claude Code integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Deiner", email = "drzioner@gmail.com" },
]
keywords = ["git", "cli", "claude-code", "developer-tools", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/drzioner/gitwise"
Repository = "https://github.com/drzioner/gitwise"
Issues = "https://github.com/drzioner/gitwise/issues"
Changelog = "https://github.com/drzioner/gitwise/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "commitizen>=4.0",
    "basedpyright>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["gitwise", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF005", "SIM102", "SIM105", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"
include = ["gitwise", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
