[project]
name = "gitwise-cli"
version = "0.35.1"
description = "Python CLI for optimizing git workflows and Claude Code integration"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Deiner", email = "drzioner@gmail.com" },
]
keywords = ["git", "cli", "claude-code", "developer-tools", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0,<16",
    "rich-argparse>=1.8.0,<2",
    "shtab>=1.8.0,<2",
]

[project.urls]
Homepage = "https://github.com/drzioner/gitwise"
Repository = "https://github.com/drzioner/gitwise"
Changelog = "https://github.com/drzioner/gitwise/blob/main/CHANGELOG.md"
Issues = "https://github.com/drzioner/gitwise/issues"

[project.scripts]
gitwise = "gitwise.__main__:main"
gw = "gitwise.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.9",
    "commitizen>=4.0",
    "basedpyright>=1.0",
    "pip-audit>=0.0.13",
    "jsonschema>=4.23.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitwise"]

[tool.hatch.build.targets.wheel.force-include]
"share" = "gitwise/share"

[tool.hatch.build.targets.sdist]
include = [
    "/gitwise",
    "/share",
    "/tests",
    "/bin",
    "/install.sh",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["gitwise", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF005", "SIM102", "SIM105", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"
include = ["gitwise", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.coverage.run]
patch = ["subprocess"]
parallel = true
source = ["gitwise"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
version_files = [
    "gitwise/__init__.py:__version__",
    "pyproject.toml:version",
]
update_changelog_on_bump = true
major_version_zero = true
